<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">


    <!--最近会话-->
    <string name="draft">[草稿]</string>
    <string name="picture">[图片]</string>
    <string name="voice">[语音]</string>
    <string name="sticker">[贴图]</string>
    <string name="video">[视频]</string>
    <string name="location">[位置]</string>
    <string name="red_pack">[红包]</string>
    <string name="wx_red_pack">微信红包</string>
    <string name="send">发送</string>
    <!--会话界面-->
    <string name="please_to_talk">按住说话</string>

    <string name="my_chat_account">微信号:%1$s</string>
    <string name="album">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_package">卡包</string>
    <string name="jian_shu">简书</string>
    <string name="csdn">CSDN</string>
    <string name="oschina">码云</string>
    <string name="github">GitHub</string>
    <string name="emotion">表情</string>
    <string name="setting">设置</string>
    <string name="qr_code_card_tip">扫一扫上面的二维码图案，加我微信</string>
    <string name="shot">拍摄</string>
    <string name="location1">位置</string>
    <string name="red_pack1">红包</string>
    <string name="zhuanzhang">转账</string>
    <string name="str_camera_permission_fail">获取相机权限失败</string>

    <!--联系人-->
    <string name="new_friend">添加朋友</string>
    <string name="group_cheat">我的群聊</string>
    <string name="group_tag">标签</string>
    <string name="group_public_number">公众号</string>
    <string name="load_contacts_error">加载联系人失败</string>
    <string name="count_of_contacts">位联系人</string>

    <!--修改备注-->
    <string name="alias">备注名</string>
    <string name="tag">标签</string>
    <string name="add_tag_to_classfy_contacts">添加标签对联系人进行分类</string>
    <string name="phone_number">电话号码</string>
    <string name="add_phone_number">添加电话号码</string>
    <string name="describe">描述</string>
    <string name="add_picture">附加图片</string>
    <string name="add_business_card_or_pic">添加名片或相关图片</string>
    <string name="alias_no_empty">备注名不能为空</string>

</resources>
