<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rlAlbum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivAlbum"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_session_func"
                android:src="@mipmap/ic_func_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivAlbum"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp7"
                android:text="@string/album"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTakePhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivShot"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_session_func"
                android:src="@mipmap/ic_func_shot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivShot"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp7"
                android:text="@string/shot"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible">

            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_session_func"
                android:src="@mipmap/ic_func_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivLocation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp7"
                android:text="@string/location1"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlRedPacket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible">

            <ImageView
                android:id="@+id/ivRedPack"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_session_func"
                android:src="@mipmap/ic_func_red_pack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivRedPack"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp7"
                android:text="@string/red_pack"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_zhuanzhang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/ivzhuanzhang"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_session_func"
                android:src="@drawable/zhuanzhang_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivzhuanzhang"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp7"
                android:text="@string/zhuanzhang"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>