<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:id="@+id/llNewFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivNewFriend"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:src="@mipmap/icon_add_friend" />

            <TextView
                android:id="@+id/tvNewFriendUnread"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignTop="@id/ivNewFriend"
                android:layout_alignEnd="@id/ivNewFriend"
                android:layout_marginTop="-5px"
                android:layout_marginEnd="-8px"
                android:background="@mipmap/bg_unread"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24px"
                android:visibility="gone" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/new_friend"
            android:textColor="@color/black0"
            android:textSize="@dimen/dp16" />

    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20" />

    <LinearLayout
        android:id="@+id/llGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:src="@mipmap/icon_add_group" />

            <TextView
                android:id="@+id/tvNewGroupUnread"
                android:layout_width="15px"
                android:layout_height="15px"
                android:layout_alignTop="@id/ivNewFriend"
                android:layout_alignRight="@id/ivNewFriend"
                android:layout_marginTop="-5px"
                android:layout_marginRight="-8px"
                android:background="@mipmap/bg_unread"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24px"
                android:visibility="gone"
                tools:ignore="NotSibling" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/group_cheat"
            android:textColor="@color/black0"
            android:textSize="@dimen/dp16" />

    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp10"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:src="@mipmap/ic_tag" />

            <TextView
                android:layout_width="15px"
                android:layout_height="15px"
                android:layout_alignTop="@id/ivNewFriend"
                android:layout_alignRight="@id/ivNewFriend"
                android:layout_marginTop="-5px"
                android:layout_marginRight="-8px"
                android:background="@mipmap/bg_unread"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24px"
                android:visibility="gone"
                tools:ignore="NotSibling" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:text="@string/tag"
            android:textColor="@color/black0"
            android:textSize="@dimen/dp16" />

    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp10"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp10"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:src="@mipmap/ic_offical" />

            <TextView
                android:layout_width="15px"
                android:layout_height="15px"
                android:layout_alignTop="@id/ivNewFriend"
                android:layout_alignRight="@id/ivNewFriend"
                android:layout_marginTop="-5px"
                android:layout_marginRight="-8px"
                android:background="@mipmap/bg_unread"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24px"
                android:visibility="gone"
                tools:ignore="NotSibling" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:text="@string/group_public_number"
            android:textColor="@color/black0"
            android:textSize="35px" />

    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20" />
</LinearLayout>